done with website

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
             <div class="container">
                 <div class="header__inner-1">
                     <div class="logo">
-                        <img src="assets/img/logo/logo.png" alt="logo">
+                        <img src="assets/img/logo/logo.png" style="height: 90px;" alt="logo">
                     </div>
                     <div class="navbar">
                         <ul class="header__menu-1" id="mobile-menu">
                             <li><a href="#hero">Home</a></li>
-                            <li><a href="#service">Services</a></li>
-                            <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#blog">Blog</a></li>
+                            <li><a href="#aboutus">About Us</a></li>
+                            <li><a href="#gallery">Gallery</a></li>
+                            <li><a href="#ourworks">Our Works</a></li>
                             <li><a href="#donate">Donate</a></li>
                         </ul>
                     </div>
@@ -109,21 +109,8 @@
                         <div class="heroright1">
                             <span class="box1"></span>
                             <span class="box2"></span>
-                            <div class="box3">
-                                <span class="box3__count">10</span>
-                                <span class="box3__years">Years Of<br>
-                                    Together</span>
-                            </div>
-                            <div class="box3 box4">
-                                <span class="box3__count">600</span>
-                                <span class="box3__years">Projects <br>
-                                    Hope</span>
-                            </div>
-                            <div class="box5">
-                                <img src="assets/img/hero/trophy.png" alt="trophy">
-                            </div>
                             <div class="heroright1__thumb">
-                                <img src="assets/img/hero/with-box.png" alt="main-hero">
+                                <img src="assets/img/hero/women_empowerment_hero.png" style="width: 885px; scale: 0.6;" alt="main-hero">
                             </div>
                         </div>
                     </div>
@@ -136,17 +123,7 @@
                     <h2 class="title">Hope For All</h2>
                 </div>
                 <div class="responsive__thumb">
-                    <img src="assets/img/hero/with-box.png" alt="main-hero">
-                    <div class="box3 res-box3">
-                        <span class="box3__count res__count">10</span>
-                        <span class="box3__years">Years Of<br>
-                            Together</span>
-                    </div>
-                    <div class="box3 box4 res-box4">
-                        <span class="box3__count res2__count">600</span>
-                        <span class="box3__years res2__years">Projects of<br>
-                            Completion</span>
-                    </div>
+                    <img src="assets/img/hero/women_empowerment_hero.png" alt="main-hero" style="scale: 0.8;">
                 </div>
                 <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
                 <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
@@ -155,8 +132,8 @@
         </div>
         <!-- /hero  -->
 
-        <!-- service  -->
-        <div class="service__area-1" id="service" style="padding: 30px 0px;">
+        <!-- aboutus  -->
+        <div class="service__area-1" id="aboutus" style="padding: 30px 0px;">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
@@ -215,7 +192,7 @@
                 </div>
             </div>
         </div>
-        <!-- /service  -->
+        <!-- /aboutus  -->
 
         <!-- counter  -->
         <div class="counter__area-1">
@@ -256,8 +233,8 @@
         </div>
         <!-- /counter  -->
 
-        <!-- portfolio -->
-        <div class="portfolio__area-1 pt-145" id="portfolio">
+        <!-- gallery -->
+        <div class="portfolio__area-1 pt-145" id="gallery">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
@@ -293,7 +270,7 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay=".9s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/women_3.jpg" alt="">
+                                <img src="assets/img/works/women_3.jpg" alt="" style="width: 100%; height: 350px;">
                                 <a class="popup-image" href="assets/img/portfolio/port2.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
@@ -335,7 +312,7 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay="1.9s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/children_2.jpg" alt="">
+                                <img src="assets/img/works/children_2.jpg" style="width: 100%;" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port5.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
@@ -349,7 +326,7 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay="2.5s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/children_1.jpg" alt="">
+                                <img src="assets/img/works/children_1.jpg" style="width: 100%;" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port7.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
@@ -362,10 +339,10 @@
                 </div>
             </div>
         </div>
-        <!-- /portfolio -->
+        <!-- /gallery -->
 
-        <!-- blog  -->
-        <div class="blog__area-1" id="blog">
+        <!-- ourworks  -->
+        <div class="blog__area-1" id="ourworks">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
@@ -377,7 +354,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="blog">
                             <div class="blog__thumb">
-                                <img src="assets/img/blog/thank-you-2022-scaled.webp" alt="blog">
+                                <img src="assets/img/blog/child_1.jpg" style="width: 100%;" alt="blog">
                             </div>
                             <div class="blog__content">
                                 <span class="blog__content__cat">Web Design</span>
@@ -393,7 +370,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="blog">
                             <div class="blog__thumb">
-                                <img src="assets/img/blog/thank-you-2022-scaled.webp" alt="blog">
+                                <img src="assets/img/blog/child_2.jpg" style="width: 100%;" alt="blog">
                             </div>
                             <div class="blog__content">
                                 <span class="blog__content__cat">Web Design</span>
@@ -409,7 +386,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="blog">
                             <div class="blog__thumb">
-                                <img src="assets/img/blog/thank-you-2022-scaled.webp" alt="blog">
+                                <img src="assets/img/blog/women_1.jpg" style="width: 100%;" alt="blog">
                             </div>
                             <div class="blog__content">
                                 <span class="blog__content__cat">Graphics</span>
@@ -426,10 +403,10 @@
                 </div>
             </div>
         </div>
-        <!-- /blog  -->
+        <!-- /ourworks  -->
 
-        <!-- contact  -->
-        <div class="contact__area-1" id="contact">
+        <!-- donate  -->
+        <div class="contact__area-1" style="padding-bottom: 10px;" id="donate">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
@@ -444,22 +421,21 @@
                                 <span class="social__icon"><i class="fa-solid fa-phone"></i></span>
                                 <div class="social__phone">
                                     <h4>Phone</h4>
-                                    <span><a href="tel:+1557446">+123 654 98752</a></span>
+                                    <span><a href="tel:+1557446">+123 456 7890</a></span>
                                 </div>
                             </div>
                             <div class="social">
                                 <span class="social__icon"><i class="fa-solid fa-envelope"></i></span>
                                 <div class="social__phone">
                                     <h4>Email</h4>
-                                    <span><a href="mailTo:Info@maria.com">Info@maria.com</a></span>
+                                    <span><a href="mailTo:Info@maria.com">hopeforall@task.com</a></span>
                                 </div>
                             </div>
                             <div class="social">
                                 <span class="social__icon"><i class="fa-solid fa-location-dot"></i></span>
                                 <div class="social__phone">
                                     <h4>Location</h4>
-                                    <span>2124 14th St
-                                        Meridian, MS 39301</span>
+                                    <span>Navi Mumbai, 410206</span>
                                 </div>
                             </div>
                         </div>
@@ -474,13 +450,20 @@
                                     <input type="email" name="email" placeholder="Email">
                                 </div>
                                 <div class="field-wrapper">
-                                    <input type="text" name="name" placeholder="Subject">
+                                    <input type="number" name="name" placeholder="Donate Amount">
+                                </div>
+                                <div class="field-wrapper">
+                                    <select class="form-control" style="color: gray; width: 100%; height: 50px;">
+                                        <option>Choose</option>
+                                        <option>Donater</option>
+                                        <option>Volunteer</option>
+                                    </select>
                                 </div>
                                 <div class="field-wrapper">
                                     <textarea name="message" placeholder="Message"></textarea>
                                 </div>
                                 <div class="field-wrapper">
-                                    <input type="submit" name="name" value="Submit Message">
+                                    <input type="submit" name="name" value="Submit">
                                 </div>
                             </form>
                         </div>
@@ -493,6 +476,7 @@
         <!-- footer  -->
         <footer>
             <div class="copyright_text text-center">
+                <div class="container" style="padding-bottom: 30px;"><h2 class="section-title text-white">Our focus to heal the world together and give empowerment to everyone need</h2></div>
                 <div class="container">
                     <div class="copyright__wrapper">
                         <p>Copyright &copy; 2022 . All Rights Reserved.</p>
