--- a/index.html
+++ b/index.html
@@ -357,13 +357,8 @@
                                 <img src="assets/img/blog/child_1.jpg" style="width: 100%;" alt="blog">
                             </div>
                             <div class="blog__content">
-                                <span class="blog__content__cat">Web Design</span>
-                                <h4 class="blog__content__title"><a href="#">How to create a website using WordPress</a>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet consectetur. At cursus sed felis cursus augue augue a.
-                                    Aliquet mauris mauris nunc odio morbi amet. Eget consectetur bibendum libero sit
-                                    pretium.</p>
-                                <!-- <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a> -->
+                                <span class="blog__content__cat">Child Education</span>
+                                <p>Providing quality education to underprivileged children, helping them build knowledge, and brighter futures through learning opportunities.</p>
                             </div>
                         </div>
                     </div>
@@ -373,13 +368,8 @@
                                 <img src="assets/img/blog/child_2.jpg" style="width: 100%;" alt="blog">
                             </div>
                             <div class="blog__content">
-                                <span class="blog__content__cat">Web Design</span>
-                                <h4 class="blog__content__title"><a href="#">Angular team streamlines
-                                        requests</a></h4>
-                                <p>Lorem ipsum dolor sit amet consectetur. At cursus sed felis cursus augue augue a.
-                                    Aliquet mauris mauris nunc odio morbi amet. Eget consectetur bibendum libero sit
-                                    pretium.</p>
-                                <!-- <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a> -->
+                                <span class="blog__content__cat">Skill Training</span>
+                                <p>Offering skill development programs that equip children and women with practical abilities to secure jobs and create sustainable livelihoods.</p>
                             </div>
                         </div>
                     </div>
@@ -389,13 +379,8 @@
                                 <img src="assets/img/blog/women_1.jpg" style="width: 100%;" alt="blog">
                             </div>
                             <div class="blog__content">
-                                <span class="blog__content__cat">Graphics</span>
-                                <h4 class="blog__content__title"><a href="#">How to handle errors in React
-                                        Javascript</a></h4>
-                                <p>Lorem ipsum dolor sit amet consectetur. At cursus sed felis cursus augue augue a.
-                                    Aliquet mauris mauris nunc odio morbi amet. Eget consectetur bibendum libero sit
-                                    pretium.</p>
-                                <!-- <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a> -->
+                                <span class="blog__content__cat">Women Empowerment</span>
+                                <p>Offering skill development programs that equip children and women with practical abilities to secure jobs and create sustainable livelihoods.</p>
                             </div>
                         </div>
                     </div>
