tab head update

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/fav.png">
-    <title>Ractic | Creative Landing Page Portfolio Website</title>
+    <title>Hope For All | Child & Women Empowerment</title>
 
     <!-- META TAGS -->
     <meta name="author" content="Creative Hunk">
-    <meta name="description" content="Ractic | Creative Landing Page Portfolio Website">
+    <meta name="description" content="Hope For All | Child & Women Empowerment">
     <meta name="keywords" content="html website, landing page, portfolio theme">
 
     <!-- CSS STYLESHEET HERE -->
