donate now button update

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <h2 class="hero1__title">Hope for All</h2>
                             <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
                             <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
-                            <a href="#" class="btn-2">Donate Now</a>
+                            <a href="#donate" class="btn-2">Donate Now</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
