--- a/index.html
+++ b/index.html
@@ -93,40 +93,42 @@
     <!-- main -->
     <main>
         <!-- hero  -->
-        <div class="hero__area-1" id="hero">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="hero1">
-                            <h2 class="hero1__title">Hope for All</h2>
-                            <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
-                            <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
-                            <a href="#donate" class="btn-2">Donate Now</a>
+        <div id="hero">
+            <div class="hero__area-1">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <div class="hero1">
+                                <h2 class="hero1__title">Hope for All</h2>
+                                <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
+                                <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
+                                <a href="#donate" class="btn-2">Donate Now</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="heroright1">
-                            <span class="box1"></span>
-                            <span class="box2"></span>
-                            <div class="heroright1__thumb">
-                                <img src="assets/img/hero/women_empowerment_hero.png" style="width: 885px; scale: 0.6;" alt="main-hero">
+                        <div class="col-lg-6">
+                            <div class="heroright1">
+                                <span class="box1"></span>
+                                <span class="box2"></span>
+                                <div class="heroright1__thumb">
+                                    <img src="assets/img/hero/women_empowerment_hero.png" style="width: 885px; scale: 0.6;" alt="main-hero">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="hero__responsive" style="padding: 25px 0px; background-color: var(--navy-1);">
-            <div class="container">
-                <div class="responsive_text">
-                    <h2 class="title">Hope For All</h2>
+            <div class="hero__responsive" style="padding: 25px 0px; background-color: var(--navy-1);">
+                <div class="container">
+                    <div class="responsive_text">
+                        <h2 class="title">Hope For All</h2>
+                    </div>
+                    <div class="responsive__thumb">
+                        <img src="assets/img/hero/women_empowerment_hero.png" alt="main-hero" style="scale: 0.8;">
+                    </div>
+                    <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
+                    <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
+                    <a href="#contact" class="btn-2">Donate Now</a>
                 </div>
-                <div class="responsive__thumb">
-                    <img src="assets/img/hero/women_empowerment_hero.png" alt="main-hero" style="scale: 0.8;">
-                </div>
-                <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
-                <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
-                <a href="#contact" class="btn-2">Donate Now</a>
             </div>
         </div>
         <!-- /hero  -->
